# rimu

./: Cargo.toml  README.md
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: lib.rs  main.rs  menu.rs  settings.rs
